--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,23 @@
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>com.badlogicgames.gdx</groupId>
             <artifactId>gdx</artifactId>
             <version>1.9.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.WinterAlexander</groupId>
+            <artifactId>gdx-utils</artifactId>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
